--- a/package.json
+++ b/package.json
@@ -2,5 +2,32 @@
   "name": "awesome-angular",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@angular/common": "^7.2.1",
+    "@angular/compiler": "^7.2.1",
+    "@angular/core": "^7.2.1",
+    "@angular/platform-browser": "^7.2.1",
+    "@angular/platform-browser-dynamic": "^7.2.1",
+    "@types/webpack": "^4.4.23",
+    "angular2-template-loader": "^0.6.2",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "7",
+    "babel-preset-env": "^1.7.0",
+    "core-js": "^2.6.2",
+    "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "rxjs": "^6.3.3",
+    "to-string-loader": "^1.1.5",
+    "ts-helpers": "^1.1.2",
+    "typescript": "^3.2.4",
+    "webpack": "^4.28.4",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14",
+    "zone.js": "^0.8.28"
+  },
+  "devDependencies": {
+    "@types/node": "^10.12.18"
+  }
 }
